--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nirmalya Saha, || Developer || Coder"
+      content="Nirmalya Saha, || Full Stack Cloud BlockChain ML Android Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap" rel="stylesheet">
-    <title>Nirmalya Saha</title>
+    <title>NIRMALYA SAHA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
